      sub-package for further information.

  Bug Fixes

    - IndexableObjectWrapper: Fixed list of provided interfaces.
      The interfaces declared for the wrapped object are no longer masked.

    - CMFDefault: Removed CMF specific slots from five_template.
      The CMF specific slots added in CMF 2.0.0-alpha have been removed again
      from the five_template.


CMF 2.0.0-beta2 (2006/03/26)

  Bug Fixes

    - CMFDefault: Refactored slots in five_template and main_template.
      main_template has now a new 'body' slot that wraps around 'header' and
      'main' slot. main_template's 'header' slot is now empty by default.

    - PortalFolder: Content IDs starting with '@@' are now disallowed.
      These names are reserved for browser views.

    - CMFDefault: Changed the way browser views are hooked up.
      To become independent of the lookup order views are now named different
      than the corresponding skin methods. The views are now enabled by
      default and hooked up by a new extension profile.

  Others

    - CMFDefault skins and views: Removed 'full_metadata_edit_form'.
      'metadata_edit_form' is now used for the full set of metadata.


CMF 2.0.0-beta (2006/02/26)

  New Features

    - CMFDefault skins: Improved support for custom i18n domains.
      If setStatus is used portal status messages are now translated before
      they are added to the query string of a redirect.

    - CMFDefault utils:  Added 'translate' function.
      This should only be used if the message can't be translated in the
      template. It is a small shortcut to getGlobalTranslationService.

    - CMFDefault: Added experimental Zope 3-style browser views.
      The views are disabled by default. See README.txt of the browser
      sub-package for further information.

    - skins: All page templates now use unicode.
      Please make sure to pass only 'ascii' strings or unicode to them.

    - CMFDefault utils: Added 'decode' function.