@@ -4,7 +4,8 @@
 <metal:slot metal:fill-slot="body" i18n:domain="cmf_calendar">
  <div metal:define-macro="calendarBox"
      class="CalendarBox"
-     tal:define="yearmonth view/getMonthAndYear;
+     tal:define="calendar_box_view context/@@calendar_box_view;
+                 yearmonth calendar_box_view/getMonthAndYear;
                  year python:yearmonth[0];
                  month python:yearmonth[1];
                  weeks python:context.portal_calendar.getEventsForCalendar(month=month, year=year);">
@@ -22,7 +23,7 @@
         <tr>
          <th>
           <a href="#" class="CalendarArrow"
-             tal:attributes="href python:view.getPreviousMonthLink(request.URL0, month, year)">&laquo;</a>
+             tal:attributes="href python: calendar_box_view.getPreviousMonthLink(request.URL0, month, year)">&laquo;</a>
          </th>
          <th colspan="5" tal:define="date python:context.ZopeTime(int(year), int(month), 1)">
           <tal:span tal:content="python:date.strftime('%B').capitalize()"
@@ -31,7 +32,7 @@
          </th>
          <th>
           <a href="#" class="CalendarArrow"
-             tal:attributes="href python:view.getNextMonthLink(request.URL0, month, year)">&raquo;</a>
+             tal:attributes="href python: calendar_box_view.getNextMonthLink(request.URL0, month, year)">&raquo;</a>
          </th>
         </tr>
 
@@ -49,7 +50,7 @@
         ><td class="event"
             tal:define="daynumber day/day;
                         datestring python:'%d/%0.2d/%0.2d' % (year, month, daynumber);"
-            tal:attributes="class python:view.getDaysClass(daynumber, month, year, day['event'])">
+            tal:attributes="class python: calendar_box_view.getDaysClass(daynumber, month, year, day['event'])">
           <a href
              tal:omit-tag="not: day/event"
              tal:attributes="href string:${portal_url}/@@calendar_day.html?date=${datestring}"
